--- a/manuscript_analysis/Case studies/mvgam_case_study3.Rmd
+++ b/manuscript_analysis/Case studies/mvgam_case_study3.Rmd
@@ -2,10 +2,10 @@
 title: 'mvgam case study 3: distributed lag models'
 author: "Nicholas Clark (n.clark@uq.edu.au)"
 output:
-  html_document:
-    df_print: paged
   pdf_document:
     highlight: zenburn
+  html_document:
+    df_print: paged
   word_document: default
 urlcolor: blue
 ---
@@ -13,10 +13,17 @@ urlcolor: blue
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(knitr)
-opts_chunk$set(tidy.opts=list(width.cutoff=40),tidy=TRUE)
+opts_chunk$set(tidy.opts=list(width.cutoff=40),
+               tidy=TRUE,
+  dev = "png",
+  dpi = 160,
+  fig.asp = 0.8,
+  fig.width = 6,
+  out.width = "60%",
+  fig.align = "center")
 ```
 
-Here we will use the `mvgam` package, which fits dynamic GAMs using MCMC sampling via either the `JAGS` software (installation links are found [here](https://sourceforge.net/projects/mcmc-jags/files/)) or via the `Stan` software (installation links are found [here](https://github.com/stan-dev/rstan/wiki/RStan-Getting-Started)), to estimate paramaters of a Bayesian distributed lag model.  These models are used to describe simultaneously non-linear and delayed functional relationships between a covariate and a response, and are sometimes referred to as exposure-lag-response models. If we assume $\tilde{\boldsymbol{y}}_{t}$ is the conditional expectation of a discrete response variable $\boldsymbol{y}$ at time $\boldsymbol{t}$, the linear predictor for a dynamic distributed lag GAM with one lagged covariate is written as:
+Here we will use the `mvgam` package (DGAMs; Clark & Wells, 2022), which fits dynamic GAMs using MCMC sampling via either the `JAGS` software (installation links are found [here](https://sourceforge.net/projects/mcmc-jags/files/)) or via the `Stan` software (installation links are found [here](https://github.com/stan-dev/rstan/wiki/RStan-Getting-Started)), to estimate paramaters of a Bayesian distributed lag model.  These models are used to describe simultaneously non-linear and delayed functional relationships between a covariate and a response, and are sometimes referred to as exposure-lag-response models. If we assume $\tilde{\boldsymbol{y}}_{t}$ is the conditional expectation of a discrete response variable $\boldsymbol{y}$ at time $\boldsymbol{t}$, the linear predictor for a dynamic distributed lag GAM with one lagged covariate is written as:
 
 $$log(\tilde{\boldsymbol{y}}_{t})={\boldsymbol{B}}_0+\sum\limits_{k=1}^K{f}(\boldsymbol{b}_{k,t}\boldsymbol{x}_{k,t})+\boldsymbol{z}_{t}\,,$$
 where $\boldsymbol{B}_{0}$ is the unknown intercept, the $\boldsymbol{b}$'s are unknown spline coefficients estimating how the functional effect of covariate ($\boldsymbol{x}$) on $log(\tilde{\boldsymbol{y}}_{t})$ changes over increasing lags (up to a maximum lag of ($\boldsymbol{K}$)) and $\boldsymbol{z}$ is a dynamic latent trend component. 
@@ -81,7 +88,7 @@ head(data_all$time, 5)
 ```
 
 View the raw series. There is a clear seasonal pattern to the data, and there are missing values scattered throughout
-```{r, fig.width = 5, fig.height = 4, fig.align='center'}
+```{r}
 plot_mvgam_series(data = data_all)
 ```
 
@@ -118,12 +125,12 @@ mod1 <- mvgam(formula =  y ~ te(mintemp, lag, k = c(6, 6)) +
 ```
 
 Posterior predictive rootograms are a useful way to explore whether a discrete model is able to capture relevant dispersion in the observed data. This plot compares the frequencies of observed vs predicted values for each bin, which can help to identify aspects of poor model fit. For example, if the gray bars (representing observed frequencies) tend to stretch below zero, this suggests the model's simulations predict the values in that particular bin less frequently than they are observed in the data. A well-fitting model that can generate realistic simulated data will provide a rootogram in which the lower boundaries of the grey bars are generally near zero
-```{r, fig.width = 5, fig.height = 4, fig.align='center'}
+```{r}
 ppc(mod1, type = 'rootogram')
 ```
 
 The `Poisson` model is not doing a great job of capturing dispersion, underpredicting the zeros in the data and overpredicting some of the medium-range values (counts of `~5-30`). The residual `Q-Q` plot confirms that the `Poisson` is not an appropriate distribution for these data
-```{r, fig.width = 6, fig.height = 5, fig.align='center'}
+```{r}
 plot(mod1, type = 'residuals')
 ```
 
@@ -141,12 +148,12 @@ mod2 <- mvgam(formula =  y ~ te(mintemp, lag, k = c(6, 6)) +
 ```
 
 The rootogram for this model looks better, though of course there is still some overprediction of medium-range values
-```{r, fig.width = 5, fig.height = 4, fig.align='center'}
+```{r}
 ppc(mod2, type = 'rootogram')
 ```
 
 However, the residual plot looks much better for this model
-```{r, fig.width = 6, fig.height = 5, fig.align='center'}
+```{r}
 plot(mod2, type = 'residuals')
 ```
 
@@ -180,19 +187,19 @@ summary(mod3)
 ```
 
 A pairs plot of the logged versions of the latent trend precision and the overdispersion parameter can give insight into whether there is still any strange behaviour or problematic parameter spaces that we must think more deeply about
-```{r, fig.width = 5, fig.height = 4, fig.align='center'}
+```{r}
 plot(log(MCMCvis::MCMCchains(mod3$model_output, 'twdis')),
      log(MCMCvis::MCMCchains(mod3$model_output, 'tau')),
      ylab = 'log(tau)', xlab = 'log(twdis)', pch = 16, col = "#8F272740")
 ```
 
 Our rootogram has not improved much with the addition of the latent trend
-```{r, fig.width = 5, fig.height = 4, fig.align='center'}
+```{r}
 ppc(mod3, type = 'rootogram')
 ```
 
 But the residual distributions look better
-```{r, fig.width = 6, fig.height = 5, fig.align='center'}
+```{r}
 plot(mod3, type = 'residuals')
 ```
 
@@ -210,25 +217,25 @@ summary(mod4)
 ```
 
 As with all other `mvgam` objects, we can create plots of the estimated forecast distribution
-```{r, fig.width = 5, fig.height = 4, fig.align='center'}
+```{r}
 plot_mvgam_fc(mod4, series = 1, newdata = data_test, ylim = c(0, 100))
 ```
 The trend now evolves smoothly via an infinite dimensional Gaussian Process
-```{r, fig.width = 5, fig.height = 4, fig.align='center'}
+```{r}
 plot_mvgam_trend(mod4, series = 1)
 ```
 
 Traceplots of smooth penalties indicate good mixing and convergence of the four MCMC chains
-```{r, fig.width = 5, fig.height = 4, fig.align='center'}
+```{r}
 rstan::stan_trace(mod4$model_output, pars = 'rho')
 ```
 
 We can also create quick plots of the estimated smooth tensor product interactions for the distributed lag terms, which basically follow `mgcv`'s two-dimensional plotting utility but uses the `mvgam`'s estimated coefficients
-```{r, fig.width = 5, fig.height = 4, fig.align='center'}
+```{r}
 plot_mvgam_smooth(mod4, series = 1, smooth = 1)
 ```
 
-```{r, fig.width = 5, fig.height = 4, fig.align='center'}
+```{r}
 plot_mvgam_smooth(mod4, series = 1, smooth = 2)
 ```
 
@@ -242,7 +249,7 @@ newdata$precip <- matrix(0, ncol = ncol(newdata$precip),
 ```
 
 Set up `viridis` plot colours and initiate the plot window to be centred around zero. We will then keep all `mintemp` values at zero apart from the particular lag being predicted so that we can visualise how the predicted function changes over lags of `mintemp`. Predictions are generated on the link scale in this case, though you could also use the response scale. Note that we need to first generate predictions with all covariates (including the `mintemp` covariate) zeroed out to find the 'baseline' prediction so that we can shift by this baseline for generating a zero-centred plot. That way our resulting plot will roughly follow the traditional `mgcv` partial effect plots
-```{r, fig.width = 6, fig.height = 5, fig.align='center'}
+```{r}
 cols <- viridis::inferno(6)
 plot(1, type = "n",
      xlab = 'Mintemp',
@@ -293,7 +300,7 @@ legend('topleft', legend = paste0('lag', seq(0, 5)),
 ```
 
 This plot demonstrates how the effect of `mintemp` is expected to change over different exposure lags, with the 3 - 5 month lags showing more of a cyclic seasonal pattern (catches expected to increase in the summer and autumn, roughly 3 - 5 months following cold minimum winter temperatures) while the recent lags (lags 0 and 1) demonstrate a more linear response function (catches broadly increasing as minimum temperature increases). This is hopefully a useful example for developing a better understanding of how a distributed lag model is attempting to recreate the data generating process. And here is the same plot for precipitation, which demonstrates how a u-shaped functional relationship diminishes toward a flat function at lags 2 - 5 (though this effect is clearly less important in the model than the mintemp * lag effect above)
-```{r, fig.width = 6, fig.height = 5, fig.align='center'}
+```{r}
 newdata <- data_test
 newdata$year <- rep(0, length(newdata$year))
 newdata$season <- rep(0, length(newdata$season))
@@ -337,13 +344,16 @@ legend('topleft', legend = paste0('lag', seq(0, 5)),
 ```
 
 All of the usual functions in `mvgam` can also be used for list data objects and for models fitted with `Stan`, so long as they contain the necessary fields `series`, `season` and `year`. For example, posterior retrodictive checks for the in-sample training period: 
-```{r, fig.width = 5, fig.height = 4, fig.align='center'}
+```{r}
 ppc(mod4, series = 1, type = 'cdf')
 ```
 
 and predictive checks for the out of sample forecast period (which demonstrates how the model tends to overpredict for the forecast period in this particular example):
-```{r, fig.width = 5, fig.height = 4, fig.align='center'}
+```{r}
 ppc(mod4, newdata = data_test, series = 1, type = 'cdf')
 ```
 
 Logical next steps for interrogating this model would be to trial different trend types (i.e. random walk), replace the distributed lag function for `precip` with a standard smooth function (that does not include lag interactions, as clearly the model above indicates that these are not supported) and inspect whether different covariates (such as `ndvi` or `maxtemp`) might play a role in modulating catches of `PP`. Finally, once we are satisfied that we have a well-performing model that we can understand and interrogate, we could expand up to a multivariate model by including other species as response variables. This would allow us to capture any possible unobserved dependencies in the catches of multiple co-occurring species in a single unified modelling framework
+  
+**References**  
+Clark, N.J. and Wells, K. (2022). Dynamic Generalized Additive Models (DGAMs) for forecasting discrete ecological time series. *Methods in Ecology and Evolution*. DOI: https://doi.org/10.1111/2041-210X.13974
